Improvement to stop long links breaking the layout on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,10 @@ article ul {
   display: inherit;
 }
 
+article ul li a {
+  word-break: break-all;
+}
+
 li {
   margin-bottom: 1rem;
 }
